# Disease_propagation

./: .gitignore  CMakeLists.txt  README.md
includes/: menu.h  person.h  simulation.h
sources/: main.cpp  menu.cpp  person.cpp  simulation.cpp
